--- a/css/styless.css
+++ b/css/styless.css
@@ -70,7 +70,7 @@ button {
 
 @media screen and (min-width: 760px) {
   .container {
-    max-width: 760px;
+    max-width: 768px;
   }
 }
 
@@ -83,8 +83,8 @@ button {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.88),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.88);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -230,10 +230,11 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 999;
+  visibility: hidden;
   background-color: #fff;
 
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -246,23 +247,19 @@ button {
 }
 
 .mobile-menu-container {
-  position: relative;
   padding-top: 72px;
   padding-bottom: 40px;
+  position: relative;
   display: flex;
   flex-direction: column;
+  margin: 0;
   height: 100%;
-}
-
-.mobile-menu-close {
-  position: absolute;
-  top: 24px;
-  right: 24px;
 }
 
 .mobile-menu-nav {
   margin-bottom: auto;
 }
+
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -280,10 +277,9 @@ button {
   height: 24px;
   width: 24px;
   border-radius: 50%;
-  background-color: #fff;
-  fill: #e7e9fc;
-  stroke-width: 1px;
-  stroke: #2e2f42;
+  background-color: transparent;
+  fill: #fff;
+  border-style: none;
   cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) border 250ms
@@ -303,17 +299,20 @@ button {
 }
 
 .nav-list-mobile {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  gap: 40px;
+  position: relative;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link-mobile {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.12;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
@@ -371,11 +370,13 @@ button {
   font-weight: 700;
   font-size: 36px;
   padding: 0 52px;
-  line-height: 1.11;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  margin-bottom: 72px;
+  padding-bottom: 72px;
+  margin: 0 auto;
+  max-width: 216px;
 }
 
 .main-button {
@@ -396,20 +397,40 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media (min-width: 768px) and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .main-section {
     background-color: #2e2f42;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-bottom: 112px 0;
     max-width: 768px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/people-office\ 1-desc@1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  }
+
+  .main-title {
+    padding: 0;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 496px;
+  }
+}
+
+@media screen and (min-width: 1157px) {
+  .main-section {
+    max-width: 1440px;
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office\ 1-desc@1.jpg);
+  }
+
+  .main-title {
+    padding: 0;
   }
 }
 
@@ -421,7 +442,6 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 76px;
-  align-items: center;
   justify-content: center;
 }
 
@@ -462,10 +482,12 @@ button {
   }
 
   .item-title {
-    display: flex;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    text-align: start;
   }
 
   .icon-container {
@@ -475,7 +497,7 @@ button {
     width: 264px;
     height: 112px;
     background-color: #f4f4fd;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
   }
@@ -488,14 +510,13 @@ button {
 /*team*/
 
 .section-team {
-  display: flex;
   background-color: #f4f4fd;
-  padding: 96px 0;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .team {
   margin-bottom: 72px;
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -529,7 +550,6 @@ button {
 }
 
 .item-staff {
-  margin-top: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -542,7 +562,7 @@ button {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
+  font-size: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -736,15 +756,14 @@ button {
 .page-footer {
   background-color: #2e2f42;
   padding: 96px 0;
-  text-align: center;
   align-items: center;
 }
 
 .footer-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 72px;
+  text-align: center;
 }
 
 .paragraph-logo {
@@ -755,11 +774,11 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  text-align: left;
 }
 
 .footer-socials-container {
   color: #f4f4fd;
-  width: 264px;
 }
 
 .footer-logo .logo-part {
@@ -773,6 +792,10 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+}
+
+.container-logo-footer {
+  margin: 120px;
 }
 
 .subtitle-footer {
@@ -793,6 +816,7 @@ button {
 .footer-socials-item {
   width: 40px;
   height: 40px;
+  justify-content: center;
 }
 
 .footer-socials-link {
@@ -901,7 +925,6 @@ button {
     align-items: baseline;
     color: #f4f4fd;
     width: 264px;
-    margin-right: 120px;
   }
   .subscribe-container {
     margin-left: 80px;
@@ -936,8 +959,11 @@ button {
   width: 288px;
 
   border-radius: 4px;
-  min-height: 584px;
-  padding: 72px 24px 24px 24px;
+  min-height: 623px;
+  padding-top: 72px;
+  padding-right: 16px;
+  padding-bottom: 24px;
+  padding-left: 16px;
   background-color: #fcfcfc;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -1075,6 +1101,9 @@ button {
 
 .agreement-container {
   margin-bottom: 24px;
+  margin-top: 16px;
+  display: inline-flex;
+  align-items: center;
 }
 
 input[type="checkbox"]:checked + label .checkbox-form {
@@ -1084,7 +1113,11 @@ input[type="checkbox"]:checked + label .checkbox-form {
 }
 
 .agreement-title {
-  font-family: "Roboto", sans-serif;
+  display: flex;
+  align-items: center;
+}
+
+.agreement {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -1106,6 +1139,7 @@ input[type="checkbox"]:checked + label .checkbox-form {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
+  flex-shrink: 0;
 }
 
 .checkbox-icon {
