--- a/css/styless.css
+++ b/css/styless.css
@@ -269,8 +269,21 @@ button {
   position: absolute;
   top: 24px;
   right: 24px;
-  border-radius: 100%;
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  fill: #ffffff;
+  border-style: none;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
   stroke-width: 1px;
+  align-items: center;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 .mobile-menu-close:focus,
@@ -281,8 +294,10 @@ button {
 }
 
 .mobile-menu-icon-close {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #2e2f42;
+  width: 8px;
+  height: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list-mobile {
@@ -322,6 +337,7 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
 }
 
@@ -340,6 +356,7 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
   font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
 
 .nav-link-mobile:hover,
@@ -609,15 +626,19 @@ button {
   justify-content: center;
 }
 
-.social-item {
-  width: 40px;
-  height: 40px;
-}
-
 .socials-menu-mobile {
   gap: 40px;
   width: 100%;
   margin-bottom: 0;
+}
+
+.social-menu {
+  margin-top: 48px;
+}
+
+.social-items {
+  width: 40px;
+  height: 40px;
 }
 
 .social-link {
@@ -767,26 +788,42 @@ button {
   display: flex;
   flex-direction: column;
   gap: 72px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
   text-align: center;
 }
 
+.logo-part {
+  color: #f4f4fd;
+}
+
+.footer-logo:active,
+.logo-part:active {
+  color: #4d5ae5;
+}
+
 .paragraph-logo {
-  margin-top: 16px;
-  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  background-color: #2e2f42;
   text-align: left;
-}
-
-.footer-socials-container {
-  color: #f4f4fd;
-}
-
-.footer-logo .logo-part {
-  color: #f4f4fd;
+  max-width: 100%;
 }
 
 .subscribe-title {
@@ -796,6 +833,18 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  text-align: center;
+}
+
+.form-subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.label-wropper {
+  margin-bottom: 16px;
 }
 
 .container-logo-footer {
@@ -809,12 +858,13 @@ button {
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
-  padding: 0;
+  text-align: center;
 }
 
 .footer-socials {
   display: flex;
   gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-socials-item {
@@ -827,11 +877,15 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socials-link:active {
+  background-color: #31d0aa;
 }
 
 .footer-social-icon {
@@ -848,20 +902,23 @@ button {
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-  padding: 8px 16px;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  color: #ffffff;
+  opacity: 0.6;
+  width: 288px;
+  height: 40px;
+}
+
+.email-input::placeholder {
   color: #ffffff;
 }
 
 .subscribe-button {
   display: flex;
-  margin: 0 auto;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  gap: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -869,8 +926,9 @@ button {
   text-align: center;
   color: #fff;
   border-radius: 4px;
-  background: #4d5ae5;
-  min-width: 165px;
+  padding: 8px 24px;
+  background-color: rgb(77, 90, 229);
+  min-width: 165;
   height: 40px;
   cursor: pointer;
   border: none;
@@ -884,7 +942,7 @@ button {
 
 .subscribe-icon {
   fill: #fff;
-  align-items: center;
+  margin-left: 16px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -895,43 +953,101 @@ button {
 }
 
 @media screen and (min-width: 768px) {
+  .page-footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+
   .footer-container {
     display: flex;
     align-items: baseline;
     flex-direction: row;
     flex-wrap: wrap;
-    column-gap: 24px;
-    justify-content: left;
+    text-align: left;
+    justify-content: flex-start;
     padding: 0 108px;
+    gap: 72px 24px;
+    max-width: 768px;
+    margin: 0 auto;
+  }
 
+  .container-logo-footer {
+    max-width: 264px;
+  }
+
+  .footer-logo:active,
+  .logo-part:active {
+    color: #4d5ae5;
+  }
+
+  .subtitle-footer {
+    text-align: start;
+  }
+
+  .footer-socials-link:active {
+    background-color: #31d0aa;
+  }
+
+  .subscribe-container {
+    margin-bottom: 0;
+  }
+
+  .subscribe-title {
     text-align: start;
   }
 
   .form-subscribe {
-    display: flex;
+    align-items: flex-start;
     flex-direction: row;
-    gap: 24px;
+  }
+
+  .label-wropper {
+    margin-bottom: 0;
   }
 
   .email-input {
-    width: 264px;
+    max-width: 264px;
+    margin: 0;
+  }
+
+  .subscribe-button {
+    margin-left: 24px;
+  }
+
+  .subscribe-button:active {
+    background: #404bbf;
   }
 }
 
 @media screen and (min-width: 1158px) {
+  .page-footer {
+    padding: 100px 0;
+    line-height: 1.6;
+  }
+
   .footer-container {
-    column-gap: 0;
+    max-width: 1158px;
+    flex-direction: row;
+    align-items: baseline;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: nowrap;
+    gap: 120px 80px;
     padding: 0 15px;
   }
-  .footer-socials-container {
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    color: #f4f4fd;
-    width: 264px;
+
+  .footer-logo:hover,
+  .logo-part:focus {
+    color: #4d5ae5;
   }
-  .subscribe-container {
-    margin-left: 80px;
+
+  .footer-socials-container {
+    margin: 0;
+  }
+
+  .subscribe-button:hover,
+  .subscribe-button:focus {
+    background: #404bbf;
   }
 }
 
