--- a/css/styless.css
+++ b/css/styless.css
@@ -230,8 +230,8 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 999;
   visibility: hidden;
+  z-index: 999;
   background-color: #fff;
 
   opacity: 0;
@@ -265,25 +265,32 @@ button {
   }
 }
 
+.nav-list-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
 .mobile-menu-close {
   position: absolute;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
+  border-radius: 100%;
+  stroke-width: 1px;
   background-color: transparent;
-  fill: #ffffff;
   border-style: none;
-  display: flex;
   justify-content: center;
-  border-radius: 50%;
+  fill: #ffffff;
+  display: flex;
   stroke-width: 1px;
   align-items: center;
   padding: 0;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 1);
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
 }
 
 .mobile-menu-close:focus,
@@ -313,7 +320,65 @@ button {
   font-size: 36px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+  display: block;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link-mobile.current {
+  position: relative;
+  color: #404bbf;
+}
+
+.contacts-list-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.contacts-item-mobile {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #434455;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+
+.socials-menu-mobile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 48px;
+  gap: 40px;
+}
+
+.socials-items {
+  width: 40px;
+  height: 40px;
+}
+
+.socials-link {
+  display: flex;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  justify-content: center;
+  align-items: center;
+  fill: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-link-tel {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
 
 .nav-item-mobile {
@@ -327,26 +392,6 @@ button {
   gap: 40px;
 }
 
-.contacts-menu {
-  margin-bottom: 48px;
-}
-
-.address-link-tel {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #4d5ae5;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-}
-
-.contacts-list-mobile {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
 .contacts-link-mobile {
   font-style: normal;
   font-weight: 500;
@@ -356,7 +401,10 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
   font-family: "Roboto", sans-serif;
-  font-style: normal;
+}
+
+.contacts-menu {
+  margin-bottom: 48px;
 }
 
 .nav-link-mobile:hover,
@@ -1191,7 +1239,6 @@ button {
     margin-left: auto;
     margin-right: auto;
     flex-wrap: nowrap;
-    gap: 120px 80px;
     padding: 0 15px;
   }
 
@@ -1434,6 +1481,8 @@ button {
 
 .agreement-container {
   margin-bottom: 24px;
+  margin-top: 16px;
+  display: inline-flex;
 }
 
 .visually-hidden {
@@ -1449,36 +1498,28 @@ button {
   overflow: hidden;
 }
 
-.agreement-title {
-  margin-bottom: 24px;
-  color: #8e8f99;
-  letter-spacing: 0.04em;
-  line-height: 1.17;
-  font-size: 12px;
-}
-
 .agreement {
   letter-spacing: 0.04em;
   color: #8e8f99;
-  width: 16px;
-  height: 16px;
-  border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 8px;
-  display: inline-flex;
+  line-height: 1.17;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+}
+
+.agreement-title {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-form {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  flex-shrink: 0;
   width: 16px;
+  background-color: transparent;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -1496,16 +1537,11 @@ button {
 }
 
 .pp-link {
-  line-height: 1.33;
+  text-underline-offset: auto;
   text-decoration: underline;
+  text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
-  fill: #8e8f99;
-  font-weight: 400;
-  font-size: 12px;
-  letter-spacing: 0.04em;
-  margin-left: 4px;
-  display: inline-flex;
 }
 
 .send-button {
